--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,61 +1,21 @@
 ---
-interface Props {
-	title: string;
-	body: string;
-	href: string;
+export interface Props {
+  title: string;
+  description: string;
+  image: string;
+  btnText: string;
+  btnLink: string;
 }
-
-const { href, title, body } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-	}
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
-		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
-	}
-</style>
+<div class="col py-3">
+  <div class="card h-100">
+    <div class="ratio ratio-16x9"><img src={Astro.props.image} alt={Astro.props.title} class="card-img-top" draggable="false" /></div>
+    <div class="card-body">
+      <h5 class="card-title">{Astro.props.title}</h5>
+      <p class="card-text">{Astro.props.description}</p>
+    </div>
+    <div class="card-footer"><a href={`${Astro.props.btnLink}`} class="btn btn-outline-primary"><i class="bi bi-camera"></i> {Astro.props.btnText}</a></div>
+  </div>
+</div>
+
