--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,12 @@
 ---
-import Card from "../components/card.astro";
 import BaseLayout from "../layouts/baseLayout.astro";
+import CardList from "../layouts/cardList.astro";
 const title = "Home Page";
 ---
 
 <BaseLayout>
   <title slot="head">{title}</title>
   <div class="row m-3 row-cols-1 row-cols-md-2 row-cols-lg-3">
-    <Card title="First card" description="This is the first card" image="https://api.lorem.space/image/album?w=500&h=500" btnLink="#" btnText="Read more 1"/>
-    <Card title="Second card" description="This is the second card" image="https://api.lorem.space/image/face?w=500&h=500" btnLink="#" btnText="Read more 2"/>
+    <CardList/>
   </div>
 </BaseLayout>
