--- a/src/pages/[date] - [name]/images.astro
+++ b/src/pages/[date] - [name]/images.astro
@@ -2,24 +2,21 @@
 import BaseLayout from "../../layouts/baseLayout.astro";
 
 export async function getStaticPaths() {
-  const entries = await Astro.glob("../../proj/*");
-  const paths = entries
-    .map((entry: any) => {
-      const src = entry.default.src;
-      const match = src.match(/(\d{8}) - ([^.]+).jpg/);
-      if (match) {
-        return { params: { date: match[1], name: match[2] } };
-      }
-      return null;
+  const projectFiles = await Astro.glob("../../proj/*.jpg");
+  const pathPattern = /(\d{8}) - ([^.]+).jpg/;
+  const staticPaths = projectFiles
+    .map((file) => {
+      const match = file.default.src.match(pathPattern);
+      return match ? { params: { date: match[1], name: match[2] } } : null;
     })
     .filter(Boolean);
-  return paths;
+  return staticPaths;
 }
 
-export function formatDate(dateString: string) {
-  const year = dateString.substring(0, 4);
-  const month = dateString.substring(4, 6);
-  const day = dateString.substring(6, 8);
+export function formatDate(date) {
+  const year = date.slice(0, 4);
+  const month = date.slice(4, 6);
+  const day = date.slice(6, 8);
   return `${day}/${month}/${year}`;
 }
 ---
