--- a/src/layouts/baseLayout.astro
+++ b/src/layouts/baseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Navbar from "../components/navbar.astro";
 import Footer from "../components/footer.astro";
-import "../styles/global.css";
+import CSS from "../styles/global.css";
 ---
 
 <html lang="it">
@@ -12,7 +12,9 @@ import "../styles/global.css";
     <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
     <script src="../scripts/color-modes.js"></script>
-    <link rel="stylesheet" href="src/styles/global.css" />
+    <style>
+      {CSS}
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <slot name="head" />
   </head>
