--- a/src/layouts/baseLayout.astro
+++ b/src/layouts/baseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Navbar from "../components/navbar.astro";
 import Footer from "../components/footer.astro";
-import CSS from "../styles/global.css";
+import "../styles/global.css";
 ---
 
 <html lang="it">
@@ -12,9 +12,6 @@ import CSS from "../styles/global.css";
     <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
     <script src="../scripts/color-modes.js"></script>
-    <style>
-      {CSS}
-    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <slot name="head" />
   </head>
