--- a/src/pages/[date] - [name]/images.astro
+++ b/src/pages/[date] - [name]/images.astro
@@ -19,6 +19,8 @@ export function formatDate(date) {
   const day = date.slice(6, 8);
   return `${day}/${month}/${year}`;
 }
+
+export const prerender = true;
 ---
 
 <BaseLayout>
