--- a/src/layouts/cardList.astro
+++ b/src/layouts/cardList.astro
@@ -31,7 +31,7 @@ export async function generateCardData() {
   return cardData;
 }
 ---
-
+test
 {
   (await generateCardData()).map((item) => (
     <div class="col py-3">
