--- a/src/layouts/cardList.astro
+++ b/src/layouts/cardList.astro
@@ -34,6 +34,7 @@ export async function generateCardData() {
 test
 {
   (await generateCardData()).map((item) => (
+    <div class="p">test2</div>
     <div class="col py-3">
       <Card item={item} />
     </div>
