no fancy automated things
but now it works :)

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -5,7 +5,7 @@
 <footer>
   <div class="card mx-auto my-4 border border-secondary">
     <div class="card-body">
-      <p class="card-text">Built with Astro by casungo</p>
+      <p class="card-text">Built with {Astro.generator} by casungo</p>
     </div>
   </div>
 </footer>
