--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -2,8 +2,17 @@
 
 ---
 
-<nav class="navbar navbar-expand-md bg-body-secondary rounded my-4">
+<nav class="navbar navbar-expand-sm bg-body-tertiary mx-auto my-4 border border-secondary rounded">
   <div class="container-fluid">
-    <a class="navbar-brand me-2" href="../">photoSite</a>
+    <a class="navbar-brand" href="../">photoSite</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="/projects">Progetti</a>
+      </div>
+    </div>
   </div>
 </nav>
