--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -1,28 +1,26 @@
 ---
-// Card.astro
-// Define the props that your component will accept
-const { item } = Astro.props;
-import { Image } from "astro:assets";
+const { img, title, subtitle, btnLink } = Astro.props;
 ---
-
+<div class="col py-3">
 <div class="card h-100">
   <div class="ratio ratio-16x9">
-    <Image
-      src={item.image}
-      alt={item.title}
+    <img
+      src={img}
+      alt={title}
       class="card-img-top"
       draggable="false"
     />
   </div>
   <div class="card-body">
-    <h5 class="card-title">{item.title}</h5>
+    <h5 class="card-title">{title}</h5>
     <h6 class="card-subtitle mb-2 text-body-secondary">
-      {item.subtitle}
+      {subtitle}
     </h6>
   </div>
   <div class="card-footer">
-    <a href={item.btnLink} class="btn btn-outline-primary">
+    <a href={btnLink} class="btn btn-outline-primary">
       <i class="bi bi-camera"></i> Vai alle foto!
     </a>
   </div>
+</div>
 </div>
