--- a/src/layouts/baseLayout.astro
+++ b/src/layouts/baseLayout.astro
@@ -1,6 +1,6 @@
 ---
-import Navbar from "../components/navbar.astro";
-import Footer from "../components/footer.astro";
+import Navbar from "../components/Navbar.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 ---
 
@@ -13,6 +13,7 @@ import "../styles/global.css";
     <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
     <script src="../scripts/color-modes.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="generator" content={Astro.generator} />
     <slot name="head" />
   </head>
   <body>
