--- a/src/layouts/baseLayout.astro
+++ b/src/layouts/baseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import Navbar from "../components/Navbar.astro";
-import Footer from "../components/Footer.astro";
-import "../styles/global.css";
+import Navbar from "@components/Navbar.astro";
+import Footer from "@components/Footer.astro";
+import "@styles/global.css";
 ---
 
 <html lang="it">
