--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from "@layouts/BaseLayout.astro";
-import Card from "@components/Card.astro";
+import BaseLayout from "@layouts/BaseLayout1.astro";
+import Card from "@components/Card1.astro";
 const title = "Home Page";
 ---
 
