--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
-import Navbar from "@components/Navbar1.astro";
-import Footer from "@components/Footer1.astro";
+import Navbar from "@components/Navbar.astro";
+import Footer from "@components/Footer.astro";
 import "@styles/global.css";
 ---
 
