--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,8 +10,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="/projects">Progetti</a>
+        <a class="nav-link active" aria-current="page" href="/">Home</a>
       </div>
     </div>
   </div>
