--- a/src/components/Photo.astro
+++ b/src/components/Photo.astro
@@ -8,7 +8,7 @@ const { img, imgThumb, alt, width, height } = Astro.props;
       target="_blank"
     >
       <img
-        src={img}
+        src={imgThumb}
         alt={alt}
         class="img-fluid"
         width="25%"
