Added top card title for each proj
+ some prettifying

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,16 @@
 <footer>
   <div class="card mx-auto my-4 border border-secondary">
     <div class="card-body">
-      <p class="card-text"><a href="https://astro.build"><img src="https://astro.badg.es/v2/built-with-astro/tiny.svg" alt="Built with Astro" width="120" height="20"></a> by casungo</p>
+      <p class="card-text">
+        <a href="https://astro.build"
+          ><img
+            src="https://astro.badg.es/v2/built-with-astro/tiny.svg"
+            alt="Built with Astro"
+            width="120"
+            height="20"
+          /></a
+        > by casungo
+      </p>
     </div>
   </div>
 </footer>
