--- a/src/pages/[date]-[name]/images.astro
+++ b/src/pages/[date]-[name]/images.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 import Photo from "@components/Photo.astro";
+import TitleCardProj from "@components/TitleCardProj.astro";
 
 export async function getStaticPaths() {
   const projectFiles = await Astro.glob("../../../public/proj/*");
@@ -95,13 +96,47 @@ async function fetchPhotos() {
   });
 }
 
+async function fetchHeroImage() {
+  const photos = await Astro.glob("../../../public/proj/*");
+  const filenameRegex = /(\d{8}) - (.+?)(\.[-\w]{8})?\.jpg/;
+
+  const filteredPhotos = photos.filter((image) => {
+    const imagePath = image.default;
+    const imagePathSrc = imagePath.src;
+    const match = imagePathSrc.match(filenameRegex);
+    const [_, date, name] = match;
+
+    const hasMatchingName = name.includes(Astro.params.name);
+    const hasMatchingDate = date.includes(Astro.params.date);
+
+    return hasMatchingName && hasMatchingDate;
+  });
+
+  const thumbImgs = await fetchThumbImgs();
+
+  return filteredPhotos.map((image, index) => {
+    const imagePath = image.default;
+    const imagePathSrc = imagePath.src;
+
+    return {
+      img: imagePathSrc,
+    };
+  });
+}
+
 const photos = await fetchPhotos();
+const heroImage = await fetchHeroImage();
 ---
 
 <BaseLayout>
   <link rel="stylesheet" href="/photoswipe/photoswipe.css" slot="head" />
   <h1 class="text-center">
-    {formattedDate() + " - " + name}
+    <TitleCardProj
+      img={heroImage[0].img}
+      title={name}
+      contentDate={formattedDate()}
+      contentTitle={name}
+    />
   </h1>
   <div class="pswp-gallery" id="gallery">
     {photos.map((photo) => <Photo {...photo} />)}
