--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,10 +2,20 @@
 
 ---
 
-<nav class="navbar navbar-expand-sm bg-body-tertiary mx-auto my-4 border border-secondary rounded">
+<nav
+  class="navbar navbar-expand-sm bg-body-tertiary mx-auto my-4 border border-secondary rounded"
+>
   <div class="container-fluid">
     <a class="navbar-brand" href="../">photoSite</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
