--- a/src/components/Photo.astro
+++ b/src/components/Photo.astro
@@ -1,16 +1,7 @@
 ---
 const { img, imgThumb, alt, width, height } = Astro.props;
 ---
-    <a
-      href={img}
-      data-pswp-width={width}
-      data-pswp-height={height}
-      target="_blank"
-    >
-      <img
-        src={imgThumb}
-        alt={alt}
-        class="img-fluid"
-        width="25%"
-      />
-    </a>
+
+<a href={img} data-pswp-width={width} data-pswp-height={height} target="_blank">
+  <img src={imgThumb} alt={alt} class="img-fluid" width="25%" />
+</a>
