--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,7 +6,7 @@
   class="navbar navbar-expand-sm bg-body-tertiary mx-auto my-4 border border-secondary rounded"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" href="../">photoSite</a>
+    <a class="navbar-brand" href="/">photoSite</a>
     <button
       class="navbar-toggler"
       type="button"
