--- a/src/components/Photo.astro
+++ b/src/components/Photo.astro
@@ -3,5 +3,5 @@ const { img, imgThumb, alt, width, height } = Astro.props;
 ---
 
 <a href={img} data-pswp-width={width} data-pswp-height={height} target="_blank">
-  <img src={imgThumb} alt={alt} class="img-fluid" width="25%" />
+  <img src={imgThumb} alt={alt} class="img-fluid rounded" width="25%" />
 </a>
